--- a/index.html
+++ b/index.html
@@ -77,7 +77,56 @@
 		</div>
 	</nav>
 </div>
+<!--_______________________________________ Carousel__________________________________ -->
+<!-- UNTUK MENGUBAH FOTO SLIDESHOW GUNAKAN FOTO LANDSCAPE DENGAN UKURAN 1403x672 pixel -->
 
+<div class="allcontain">
+	<div id="carousel-up" class="carousel slide" data-ride="carousel">
+		<div class="carousel-inner " role="listbox">
+			<div class="item active">
+			   <!-- <video width="1450" height="672" autoplay><source src="image/ex.mp4" type="video/mp4">-->
+				<img src="image/gambar1.jpg" alt="gambar">
+				<div class="carousel-caption">
+					<h2 style="color:white;"> Acafoursa </h2><!-- UNTUK MENGUBAH FOTO SLIDESHOW GUNAKAN FOTO LANDSCAPE DENGAN UKURAN 1403x672 pixel -->
+					<p>   <br>
+						</p>
+				</div>
+			 </div>
+			 <div class="item">
+				<img src="image/gambar2.jpg" alt="gambar">
+				<div class="carousel-caption">
+					<h2  style="color:white;"> Unity in Diversity </h2><!-- UNTUK MENGUBAH FOTO SLIDESHOW GUNAKAN FOTO LANDSCAPE DENGAN UKURAN 1403x672 pixel -->
+						<p> <br>
+						</p>
+				</div>
+			 </div>
+
+<!-- UNTUK MENAMBAHKAN FOTO SLIDE SHOW BIAR LEBIH DARI 3 FOTO COPY PASTE DARI KODE INI SAMPAI KODE PEMBATAS  -->
+			 <div class="item">
+				<img src="image/gambar3.jpg" alt="gambar">
+				<div class="carousel-caption">
+					<h2  style="color:black;"> </h2><!-- UNTUK MENGUBAH FOTO SLIDESHOW GUNAKAN FOTO LANDSCAPE DENGAN UKURAN 1403x672 pixel -->
+					<p> <br>
+						  </p>
+				</div>
+			 </div>
+			 <div class="item">
+				<img src="image/gambar4.jpg" alt="gambar">
+				<div class="carousel-caption">
+					<h2  style="color:black;"> </h2><!-- UNTUK MENGUBAH FOTO SLIDESHOW GUNAKAN FOTO LANDSCAPE DENGAN UKURAN 1403x672 pixel -->
+					<p> <br>
+						  </p>
+				</div>
+			 </div>
+<!-- INI KODE PEMBATASNYA -->
+
+
+
+		</div>
+		
+	</div>
+</div>
+<!-- ____________________Featured Section ______________________________--> 
 <div class="allcontain">
 	<div class="feturedsection">
 		<h1 class="text-center">&bullet; KETUA KELAS &bullet;</h1>
@@ -87,14 +136,14 @@
 			<div class="col-lg-6 costumcol colborder1">
 				<div class="row costumrow">
 					<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 img1colon">
-						<img src="xia4/ketua.png" alt="siswa"> 
+						<img src="xia4/ketua.png" alt="siswa"> <!-- FOTO SISWA --> <!-- FOTO SISWA -->
 					</div>
 					<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 txt1colon ">
 						<div class="featurecontant">
 							<h1>DAFFA ZULFA YUDHANTO</h1>
 							<p>"Think big as galaxy [Bos Ufo]"</p>
 							<BR><BR><BR><BR><BR><!--SOSMED KETUA KELAS -->
-			 				<div class="bottomsocial" align="center">
+			 				<div class="bottomsocial1" align="center">
 								<a href="#"><i class="fa fa-facebook"></i></a>
 								<a href="http://twitter.com/Bosufo30"><i class="fa fa-twitter"></i></a>
 								<a href="https://plus.google.com/113058833626562776869"><i class="fa fa-google-plus"></i></a>
@@ -116,7 +165,7 @@
 							<h1>BINTANG JIHAD MAHARDHIKA</h1>
 							<p>"Usaha, disiplin, doa"</p>
 							<BR><BR><BR><BR><BR><!--SOSMED KETUA KELAS -->
-			 				<div class="bottomsocial" align="center">
+			 				<div class="bottomsocial1" align="center">
 								<a href="#"><i class="fa fa-facebook"></i></a>
 								<a href="#"><i class="fa fa-twitter"></i></a>
 								<a href="#"><i class="fa fa-google-plus"></i></a>
@@ -668,7 +717,7 @@
 								<a href="#"><i class="fa fa-google-plus"></i></a>
 								<a href="https://www.instagram.com/djatoe555"><i class="fa fa-instagram"></i></a>
 							</div>
-	 							<button  onclick="window.location.href='http://djtoecountryside.000webhostapp.com'">WEBSITE</button><br> <!-- ganti link edus.web.id dengan link website kalian -->
+	 							<button  onclick="window.location.href='https://countrysidedjtoe.000webhostapp.com/'">WEBSITE</button><br> <!-- ganti link edus.web.id dengan link website kalian -->
 	 							<p>Klik tombol di atas untuk selengkapnya</p>
 							</div>
 							<div class="stars2">
@@ -899,7 +948,7 @@
 								<a href="http://plus.google.com/u/0/116317822473222330104"><i class="fa fa-google-plus"></i></a>
 								<a href="http://www.instagram.com/faishalzakiy"><i class="fa fa-instagram"></i></a>
 							</div>
-	 							<button  onclick="window.location.href='http://www.neweb.faishalz.ga'">WEBSITE</button><br> <!-- ganti link edus.web.id dengan link website kalian -->
+	 							<button  onclick="window.location.href='http://neweb.faishalz.ga'">WEBSITE</button><br> <!-- ganti link edus.web.id dengan link website kalian -->
 	 							<p>Klik tombol di atas untuk selengkapnya</p>
 							</div>
 							<div class="stars2">
